[package]
name = "add-numbers-api"
version = "0.1.0"
edition = "2021"
autobins = false

[dependencies]
lambda_http = "0.4.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
tracing = "0.1.30"
tracing-subscriber = "0.3.8"
tokio = { version = "1.15", features = ["full"] }
logic = { path = "../../logic", version = "0.1.0"}

[[bin]]
name = "bootstrap"
path = "src/main.rs"
